-- This file will contain all the table creation scripts.
DROP TABLE users;
CREATE TABLE users (
    user_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    role VARCHAR2(20) NOT NULL CHECK (role IN ('admin', 'pm', 'client', 'developer', 'sales')),
    email VARCHAR2(255) NOT NULL UNIQUE,
    name VARCHAR2(255) NOT NULL,
    password VARCHAR2(255) NOT NULL,
    is_active NUMBER(1,0) DEFAULT 1 NOT NULL CHECK (is_active IN (0, 1))
);

-- Optional: Add comments for better documentation
COMMENT ON TABLE users IS 'Stores user information for the application.';
COMMENT ON COLUMN users.user_id IS 'Unique identifier for the user.';
COMMENT ON COLUMN users.role IS 'Role of the user (admin, pm, client, developer, sales).';
COMMENT ON COLUMN users.email IS 'Unique email address of the user.';
COMMENT ON COLUMN users.password IS 'password of the user.';
COMMENT ON COLUMN users.is_active IS 'Status of the user (1 for active, 0 for inactive).';

-- Append new table creation scripts based on the ER diagram

CREATE TABLE teams (
    team_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    team_name VARCHAR2(255) NOT NULL,
    created_at DATE DEFAULT SYSDATE
);

CREATE TABLE clients (
    client_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    user_id NUMBER NOT NULL,
    company_name VARCHAR2(255) NOT NULL,
    industry VARCHAR2(255),
    timezone VARCHAR2(50),
    CONSTRAINT fk_clients_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE contacts (
    contact_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    user_id NUMBER NOT NULL,
    client_id NUMBER,
    full_name VARCHAR2(255) NOT NULL,
    email VARCHAR2(255) NOT NULL,
    phone VARCHAR2(50),
    contact_type VARCHAR2(50) CHECK (contact_type IN ('primary', 'secondary', 'tertiary')),
    CONSTRAINT fk_contacts_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_contacts_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id)
);

CREATE TABLE proposals (
    proposal_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    client_id NUMBER NOT NULL,
    pm_user_id NUMBER,
    title VARCHAR2(255) NOT NULL,
    description CLOB,
    estimated_hours NUMBER,
    actual_hours NUMBER,
    value NUMBER,
    status VARCHAR2(50) CHECK (status IN ('draft', 'submitted', 'approved', 'rejected', 'active', 'completed')),
    srs_approved NUMBER(1,0) DEFAULT 0 NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    expected_close DATE,
    actual_close DATE,
    CONSTRAINT fk_proposals_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id),
    CONSTRAINT fk_proposals_pm_user
        FOREIGN KEY (pm_user_id)
        REFERENCES users(user_id)
);

CREATE TABLE tasks (
    task_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    proposal_id NUMBER NOT NULL,
    team_id NUMBER,
    locked_by NUMBER,
    title VARCHAR2(255) NOT NULL,
    description CLOB,
    status VARCHAR2(50) CHECK (status IN ('todo', 'in_progress', 'done')),
    due_date DATE,
    completed_date DATE,
    priority VARCHAR2(50) DEFAULT 'Medium' NOT NULL CHECK (priority IN ('Low', 'Medium', 'High')),
    CONSTRAINT fk_tasks_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id),
    CONSTRAINT fk_tasks_team
        FOREIGN KEY (team_id)
        REFERENCES teams(team_id),
    CONSTRAINT fk_tasks_locked_by
        FOREIGN KEY (locked_by)
        REFERENCES users(user_id)
);
COMMENT ON COLUMN tasks.priority IS 'Priority of the task (Low, Medium, High).';

CREATE TABLE team_members (
    team_member_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    team_id NUMBER NOT NULL,
    user_id NUMBER NOT NULL,
    allocation_percentage NUMBER,
    assigned_at DATE DEFAULT SYSDATE,
    CONSTRAINT fk_team_members_team
        FOREIGN KEY (team_id)
        REFERENCES teams(team_id),
    CONSTRAINT fk_team_members_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE meetings (
    meeting_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    proposal_id NUMBER NOT NULL,
    meeting_type VARCHAR2(50) CHECK (meeting_type IN ('scrum', 'sprint_planning', 'sprint_review', 'sprint_retrospective', 'srs', 'kickoff')),
    scheduled_date DATE NOT NULL,
    subject VARCHAR2(255),
    minutes_of_meeting CLOB,
    status VARCHAR2(50) CHECK (status IN ('scheduled', 'completed', 'cancelled')),
    CONSTRAINT fk_meetings_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id)
);

CREATE TABLE meeting_participants (
    participant_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    meeting_id NUMBER NOT NULL,
    user_id NUMBER NOT NULL,
    attendance VARCHAR2(50) CHECK (attendance IN ('invited', 'attended', 'absent')),
    CONSTRAINT fk_mp_meeting
        FOREIGN KEY (meeting_id)
        REFERENCES meetings(meeting_id),
    CONSTRAINT fk_mp_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
);

CREATE TABLE documents (
    document_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    meeting_id NUMBER,
    file_name VARCHAR2(255) NOT NULL,
    file_path VARCHAR2(1024) NOT NULL,
    doc_type VARCHAR2(50) CHECK (doc_type IN ('srs', 'mom', 'wireframe', 'proposal', 'other')),
    uploaded_by NUMBER NOT NULL,
    uploaded_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_documents_meeting
        FOREIGN KEY (meeting_id)
        REFERENCES meetings(meeting_id),
    CONSTRAINT fk_documents_uploaded_by
        FOREIGN KEY (uploaded_by)
        REFERENCES users(user_id)
);

CREATE TABLE feedback (
    feedback_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    proposal_id NUMBER NOT NULL,
    rating NUMBER CHECK (rating >= 1 AND rating <= 5),
    comments CLOB,
    feedback_date DATE DEFAULT SYSDATE,
    CONSTRAINT fk_feedback_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id)
);

CREATE TABLE invoices (
    invoice_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    client_id NUMBER NOT NULL,
    proposal_id NUMBER,
    amount NUMBER NOT NULL,
    issue_date DATE NOT NULL,
    due_date DATE NOT NULL,
    status VARCHAR2(50) CHECK (status IN ('pending', 'paid', 'overdue', 'cancelled')) NOT NULL,
    CONSTRAINT fk_invoices_client
        FOREIGN KEY (client_id)
        REFERENCES clients(client_id),
    CONSTRAINT fk_invoices_proposal
        FOREIGN KEY (proposal_id)
        REFERENCES proposals(proposal_id)
);

COMMENT ON TABLE invoices IS 'Stores invoice information for clients.';
COMMENT ON COLUMN invoices.invoice_id IS 'Unique identifier for the invoice.';
COMMENT ON COLUMN invoices.client_id IS 'Foreign key to the client who received the invoice.';
COMMENT ON COLUMN invoices.proposal_id IS 'Foreign key to the proposal associated with this invoice, if applicable.';
COMMENT ON COLUMN invoices.amount IS 'The total amount of the invoice.';
COMMENT ON COLUMN invoices.issue_date IS 'The date the invoice was issued.';
COMMENT ON COLUMN invoices.due_date IS 'The date the invoice is due.';
COMMENT ON COLUMN invoices.status IS 'The current status of the invoice (pending, paid, overdue, cancelled).';

CREATE TABLE leads (
    lead_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
    sales_user_id NUMBER NOT NULL, -- The sales person who owns this lead
    company_name VARCHAR2(255) NOT NULL,
    contact_person VARCHAR2(255) NOT NULL,
    email VARCHAR2(255),
    phone VARCHAR2(50),
    status VARCHAR2(50) CHECK (status IN ('new', 'contacted', 'qualified', 'proposal_sent', 'negotiating', 'closed_won', 'closed_lost')) NOT NULL,
    estimated_value NUMBER,
    source VARCHAR2(50), -- e.g., 'LinkedIn', 'Referral', 'Website', 'Event'
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_leads_sales_user
        FOREIGN KEY (sales_user_id)
        REFERENCES users(user_id)
);

COMMENT ON TABLE leads IS 'Stores sales lead information.';
COMMENT ON COLUMN leads.lead_id IS 'Unique identifier for the lead.';
COMMENT ON COLUMN leads.sales_user_id IS 'Foreign key to the sales user who owns this lead.';
COMMENT ON COLUMN leads.company_name IS 'Name of the company associated with the lead.';
COMMENT ON COLUMN leads.contact_person IS 'Name of the primary contact person for the lead.';
COMMENT ON COLUMN leads.email IS 'Email address of the contact person.';
COMMENT ON COLUMN leads.phone IS 'Phone number of the contact person.';
COMMENT ON COLUMN leads.status IS 'Current status of the lead (new, contacted, qualified, proposal_sent, negotiating, closed_won, closed_lost).';
COMMENT ON COLUMN leads.estimated_value IS 'Estimated value of the potential deal.';
COMMENT ON COLUMN leads.source IS 'Source from which the lead was generated.';
COMMENT ON COLUMN leads.created_at IS 'Timestamp when the lead was created.';